Fix verified correctness bugs from thorough audit
- NetworkEdge BGPPeering: apiParams used {$bgpPeeringUuid} as the path
  token but all client code passes Map.of("uuid", uuid). Name-based URI
  substitution never matched, so get/update produced broken URLs (.../bgp/),
  and DeleteBGP had no declared endpoint at all (runtime 404). Normalized the
  BGP tokens to {$uuid} and added the missing DeleteBGP endpoint so
  get/update/delete by uuid all resolve correctly.
- ResellerWrapper: removed 4 getters overriding @Delegate to return null
  (getAccountNumber/getAccountName/getAccountType/getIbxs) — every reseller
  field came back null; @Delegate on the ResellerJson now supplies real values.
  Dropped the now-unused imports.
- ServiceProfileOperator / NetworkOperator builders: accumulator methods
  initialized lists with Collections.singletonList(...) then called .add(...)
  on the second element -> UnsupportedOperationException. The inner Notification
  email list (mutated by addEmail) had the same defect. Switched to mutable
  new ArrayList<>(List.of(...)). Affects notification/allowedEmail/tag/port/
  accessPointTypeConfig/customField builders.
- MetrosImpl.list(MetroPresence): delegated to the no-arg serviceClient.list(),
  silently dropping the presence filter; now passes the param through.

mvn test: 434 default + 78 wiremock green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>